<resources>
    <string name="app_name">Notes App</string>
    <string name="splash_heading">Take your note.</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hint_full_name">Full Name</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="image_description">Image description</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_account_sign_up"><b><font color="#AAA8A8">Don\'t have account?</font> <u><font color="#153E20">Sign up</font></u></b></string>
    <string name="already_have_account_sign_in"><b><font color="#AAA8A8">Already have an account?</font> <u><font color="#153E20">Sign In</font></u></b></string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="note">Note</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminder">Reminder</string>
    <string name="label">Label</string>
    <string name="bin">Bin</string>
    <string name="search_here">Search here..</string>
    <string name="sample_note">Note-taking (sometimes written as note-taking or note taking) is the practice of recording information from different sources and platforms. By taking notes, the writer records the essence of the information, freeing their mind from having to recall everything. Notes are commonly drawn from a transient source, such as an oral discussion at a meeting, or a lecture (notes of a meeting are usually called minutes), in which case the notes may be the only record of the event. Since the advent of writing and literacy, notes traditionally were almost always handwritten (often in notebooks), but the introduction of note-taking software has made digital note-taking possible and widespread. Note-taking is a foundational skill in personal knowledge management.</string>
    <string name="sample_heading"><u>Notes Hello World..</u></string>
    <string name="sample_date">25th July, 2024</string>
    <string name="sample_time">10:00 PM</string>
    <string name="title">Title</string>
    <string name="type_here">Type here..</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_date_and_time"><u>Reminder Date And Time</u></string>
    <string name="log_out">Log Out</string>
    <string name="number">Number</string>
</resources>