<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/note"
            android:icon="@drawable/note"
            android:title="@string/note"/>
        <item
            android:id="@+id/reminder"
            android:icon="@drawable/note_reminder"
            android:title="@string/reminder"/>
        <item
            android:id="@+id/bin"
            android:icon="@drawable/bin"
            android:title="@string/bin"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/log_out"
            android:title="@string/log_out"/>
    </group>

</menu>