<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/sallow_green"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/sample_date"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/sample_time"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/reminder_date_and_time"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/reminderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/sample_date"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/calendar"
                android:drawablePadding="5dp"
                app:drawableTint="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/reminderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/sample_time"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/notification_active"
                android:drawablePadding="5dp"
                app:drawableTint="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:minHeight="150dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/noteBackImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/sample_heading"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="10"
                    android:text="@string/sample_note"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>