<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_leaf_bg"
    android:orientation="vertical"
    tools:context=".ui.authentication.Login">

    <!-- Splash page design start -->
    <RelativeLayout
        android:id="@+id/welcomeRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/takeNoteTextView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:fontFamily="sans-serif"
            android:text="@string/splash_heading"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/takeNoteTextView"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@color/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createAccBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </RelativeLayout>
    <!-- Splash page design end -->

    <!-- Login page design start -->
    <RelativeLayout
        android:id="@+id/loginRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/image"
            android:backgroundTint="@color/white">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </RelativeLayout>
    <!-- Login page design end -->

</LinearLayout>