<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_back_bg"
    android:orientation="vertical"
    tools:context=".ui.authentication.Registration">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="50dp"
                android:background="@drawable/back_btn_bg"
                android:gravity="center"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/back_img"
                    app:tint="@color/colorOnPrimary" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/register"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/create_your_account"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="50dp"
                android:autofillHints="true"
                android:background="@drawable/edt_bg"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:hint="@string/hint_full_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorOnPrimary"
                android:textColorHint="@color/colorOnPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="true"
                android:background="@drawable/edt_bg"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:hint="@string/number"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorOnPrimary"
                android:textColorHint="@color/colorOnPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="true"
                android:background="@drawable/edt_bg"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorOnPrimary"
                android:textColorHint="@color/colorOnPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edt_bg">
            <EditText
                android:id="@+id/password"
                android:layout_toStartOf="@+id/passwordToggle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:autofillHints="true"
                android:background="@drawable/edt_bg"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:drawableTint="#075B2C"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorOnPrimary"
                android:textColorHint="@color/colorOnPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />
                <ImageView
                    android:id="@+id/passwordToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/close_eye"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:tint="#075B2C"
                    android:layout_marginHorizontal="10dp"
                    android:contentDescription="@string/image_description"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edt_bg">
            <EditText
                android:id="@+id/confirmPass"
                android:layout_toStartOf="@+id/conPasswordToggle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:autofillHints="true"
                android:background="@drawable/edt_bg"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:drawableTint="#075B2C"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorOnPrimary"
                android:textColorHint="@color/colorOnPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />
                <ImageView
                    android:id="@+id/conPasswordToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/close_eye"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:tint="#075B2C"
                    android:layout_marginHorizontal="10dp"
                    android:contentDescription="@string/image_description"/>
            </RelativeLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorOnPrimary"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.9"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:letterSpacing="0.01"
                    android:text="Or Continue With"
                    android:textColor="@color/deep_grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.9"
                    android:background="@color/grey" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toStartOf="@+id/google"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="80dp"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/google" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toEndOf="@+id/google"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/linkedin" />
            </RelativeLayout>

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:gravity="bottom|center_horizontal"
                android:text="@string/already_have_account_sign_in"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/pBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#66FFFFFF"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:progressTint="@color/colorOnPrimary" />
    </LinearLayout>

</RelativeLayout>